--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>git e github alura</title>
+    <title>Git e github alura</title>
     <meta charset="utf-8">
   </head>
   <body>
